--- a/src/components/ArticleCard.astro
+++ b/src/components/ArticleCard.astro
@@ -81,7 +81,10 @@ const shortDescription =
           </span>
         )
       }
-      <span class="text-secondary-accessible ml-auto text-xs" data-cy="article-date">
+      <span
+        class="text-secondary-accessible ml-auto text-xs"
+        data-cy="article-date"
+      >
         {formattedDate}
       </span>
     </div>
@@ -109,7 +112,10 @@ const shortDescription =
       class="card-actions mt-auto items-center justify-between"
       data-cy="article-footer"
     >
-      <span class="text-secondary-accessible text-xs" data-cy="article-reading-time">
+      <span
+        class="text-secondary-accessible text-xs"
+        data-cy="article-reading-time"
+      >
         {readingTime} min
       </span>
 
