--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,9 +12,6 @@ const pageTitle = t("page.title.home");
 const pageDescription = t("meta.description.home");
 ---
 
-<MainLayout 
-  title={pageTitle}
-  description={pageDescription}
->
+<MainLayout title={pageTitle} description={pageDescription}>
   <LatestArticlesSection />
 </MainLayout>
