--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,9 @@ const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
-<footer class="footer bg-base-300 text-neutral-content border-t border-base-content/10 p-4">
+<footer
+  class="footer bg-base-300 text-neutral-content border-base-content/10 border-t p-4"
+>
   <!-- Sur mobile: layout vertical centré, sur desktop: layout horizontal -->
   <div
     class="flex w-full flex-col items-center gap-4 sm:flex-row sm:justify-between"
