--- a/src/pages/fr/index.astro
+++ b/src/pages/fr/index.astro
@@ -13,9 +13,6 @@ const pageTitle = t("page.title.home");
 const pageDescription = t("meta.description.home");
 ---
 
-<MainLayout 
-  title={pageTitle}
-  description={pageDescription}
->
+<MainLayout title={pageTitle} description={pageDescription}>
   <LatestArticlesSection />
 </MainLayout>
