--- a/src/components/pages/CategoryPage.astro
+++ b/src/components/pages/CategoryPage.astro
@@ -1,5 +1,5 @@
 ---
-import MainLayout from "../layouts/MainLayout.astro";
+import MainLayout from "../../layouts/MainLayout.astro";
 import ArticleCard from "../ui/ArticleCard.astro";
 import { useTranslations } from "../i18n/utils";
 import { siteUtils } from "../config/site";
