--- a/src/components/sections/LatestArticlesSection.astro
+++ b/src/components/sections/LatestArticlesSection.astro
@@ -7,7 +7,7 @@ import {
   getLangFromUrl,
   useTranslations,
   useTranslatedPath,
-} from "../i18n/utils";
+} from "../../i18n/utils";
 import {
   estimateReadingTime as utilEstimateReadingTime,
   getPostCategory as utilGetPostCategory,
