--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -1,6 +1,5 @@
 ---
-import { getLangFromUrl } from "../i18n/utils";
-import { useTranslations } from "../i18n/utils";
+import { getLangFromUrl, useTranslations } from "../../i18n/utils";
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
