--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -137,7 +137,7 @@ const blogPostSchema = siteUtils.generateBlogPostSchema({
                   d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z"
                   clip-rule="evenodd"></path>
               </svg>
-              <span>{readingTime} min de lecture</span>
+              <span>{readingTime} min {t("blog.readingTime")}</span>
             </div>
           </div>
         </header>
